Conected tabs in home

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -29,6 +29,7 @@
 
                         <a href="#">
                             <h1>{{ slide.title }}</h1>
+
                             <p class="hide-sm">{{ slide.excerpt }}</p>
                             <!--<h1>Calzado casual dama</h1>
 
@@ -49,20 +50,100 @@
 </div>
 
 <section id="products">
-    <div class="container">
+    <div class="container" ng-controller="TabsCtrl as Tab">
         <div class="col-xs-3"> <!-- required for floating -->
             <h3>Nuestro catálogo</h3>
             <!-- Nav tabs -->
-            <ul class="nav nav-tabs tabs-left">
-                <li class="active"><a href="#home" data-toggle="tab">Calzado artesanal</a></li>
-                <li><a href="#profile" data-toggle="tab">Calzado Dama</a></li>
-                <li><a href="#messages" data-toggle="tab">Calzado Caballero</a></li>
-                <li><a href="#settings" data-toggle="tab">Calzado infantil</a></li>
-            </ul>
+            <uib-tabset active="active" template-url="/templates/partials/tabset.html" class="tab-animation">
+                <uib-tab index="active" heading="Calzado artesanal" select="Tab.Tab1()"
+                         template-url="/templates/partials/tab.html">
+                    <div class="container-fluid">
+                        <div class="col-md-4" ng-repeat="item in Tab.list1">
+                            <a href="#">
+                                <div class="box-default">
+                                    <div class="box-header">
+                                        <div class="img-box"
+                                             style="background-image: url('{{ item.urlImages.medium }}')"></div>
+                                    </div>
+                                    <div class="box-container">
+                                        <h3>{{ item.title }}</h3>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="see-more pull-right">
+                            <a href="#" class="btn btn-orange"><i class="fa fa-plus"></i> Mostrar más</a>
+                        </div>
+                    </div>
+                </uib-tab>
+                <uib-tab index="active" heading="Calzado Dama" select="Tab.Tab2()"
+                         template-url="/templates/partials/tab.html">
+                    <div class="container-fluid">
+                        <div class="col-md-4" ng-repeat="item in Tab.list2">
+                            <a href="#">
+                                <div class="box-default">
+                                    <div class="box-header">
+                                        <div class="img-box"
+                                             style="background-image: url('{{ item.urlImages.medium }}')"></div>
+                                    </div>
+                                    <div class="box-container">
+                                        <h3>{{ item.title }}</h3>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="see-more pull-right">
+                            <a href="#" class="btn btn-orange"><i class="fa fa-plus"></i> Mostrar más</a>
+                        </div>
+                    </div>
+                </uib-tab>
+                <uib-tab index="active" heading="Calzado Caballero" select="Tab.Tab3()"
+                         template-url="/templates/partials/tab.html">
+                    <div class="container-fluid">
+                        <div class="col-md-4" ng-repeat="item in Tab.list3">
+                            <a href="#">
+                                <div class="box-default">
+                                    <div class="box-header">
+                                        <div class="img-box"
+                                             style="background-image: url('{{ item.urlImages.medium }}')"></div>
+                                    </div>
+                                    <div class="box-container">
+                                        <h3>{{ item.title }}</h3>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="see-more pull-right">
+                            <a href="#" class="btn btn-orange"><i class="fa fa-plus"></i> Mostrar más</a>
+                        </div>
+                    </div>
+                </uib-tab>
+                <uib-tab index="active" heading="Calzado infantil" select="Tab.Tab4()"
+                         template-url="/templates/partials/tab.html">
+                    <div class="container-fluid">
+                        <div class="col-md-4" ng-repeat="item in Tab.list4">
+                            <a href="#">
+                                <div class="box-default">
+                                    <div class="box-header">
+                                        <div class="img-box"
+                                             style="background-image: url('{{ item.urlImages.medium }}')"></div>
+                                    </div>
+                                    <div class="box-container">
+                                        <h3>{{ item.title }}</h3>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="see-more pull-right">
+                            <a href="#" class="btn btn-orange"><i class="fa fa-plus"></i> Mostrar más</a>
+                        </div>
+                    </div>
+                </uib-tab>
+            </uib-tabset>
+
         </div>
 
-        <div class="col-xs-9">
-            <!-- Tab panes -->
+        <!--<div class="col-xs-9">
             <div class="tab-content">
                 <div class="tab-pane active" id="home">
                     <div class="container-fluid">
@@ -237,7 +318,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
     </div>
 </section>
 
