--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -5,9 +5,14 @@
     <div class="box-widget-container">
         <h2>Correo electrónico</h2>
 
+        <h3><a href="tel:013531062495"><i class="fa fa-phone"></i> 01 353 106 2495</a></h3>
         <h3><a href="mailto:{{ initConfig.email }}"><i class="fa fa-envelope"></i>
             {{ initConfig.email }}</a>
         </h3>
+        <h3><a href="https://www.google.com.mx/maps/place/San+Daniel+Comboni+284,+Centro+Tres,+Sahuayo+de+Morelos,+Mich./@20.0642639,-102.7300404,17z/data=!3m1!4b1!4m5!3m4!1s0x842ee34e7d91b5b1:0x5d3896efd8723777!8m2!3d20.0642589!4d-102.7278464"><i
+                        class="fa fa-map-marker"></i> San Daniel comboni #284, 59000 Sahuayo.</a></h3>
+        <h3><a href="https://www.facebook.com/joseluisgtzf"><i class="fa fa-facebook-square"></i> Facebook</a></h3>
+
         <br/>
 
         <h2>Envíanos un mensaje</h2>
@@ -30,7 +35,7 @@
                               class="form-control ng-pristine ng-untouched ng-invalid ng-invalid-required" required=""
                               ng-model="Contact.notification.message"></textarea>
                 </div>
-                <button type="submit" class="btn btn-block btn-red" ng-disabled="Contact.busy">Enviar
+                <button type="submit" class="btn btn-block btn-orange" ng-disabled="Contact.busy">Enviar
                     <!-- ngIf: Contact.busy --></button>
             </form>
         </div>
