--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -251,6 +251,8 @@ header
   position absolute
   background rgba(0, 0, 0, 0.5)
   height 100%
+.carousel-control.right, .carousel-control.left
+  background-image none
 .carousel-inner
   background-color rgba(238, 231, 222, 0.07)
   border-bottom 3px dashed #372611
@@ -317,8 +319,8 @@ header
 #content-area
   margin 60px 0 60px
   .title-post
-    text-align center
-    color #555
+    text-align left
+    color #3a2103
     clear both
     .title
       color #555
@@ -417,7 +419,10 @@ header
     background rgba(224, 143, 23, 0.6)
     text-shadow 0 0 10px #000
 #content-contact
-  background #fff
+  background-image url('../img/bg-contact.png')
+  background-size cover
+  background-position center
+  background-repeat no-repeat
 #news
   .title
     color #555555
@@ -559,24 +564,25 @@ header
   padding 25px
 .box-widget
   padding 5px 0
-  border 1px solid #f5f5f5
+  border 3px dashed #fff
+  background-color #eee7de
   .box-widget-header
     padding 10px
     border-bottom 1px solid #ccc
-    font-size 20px
-    background-color #999
-    color white
+    font-size 22px
+    background-color transparent
+    color #3a2103
   .box-widget-container
     padding 20px
     h3>a, h2>a
       font-size 14px
-      color #777777
+      color #6a5c5d
       font-weight 300
       &:hover
         color #bf9e4f
     h2
       font-size 18px
-      color #555
+      color #6a5c5d
 .box-doc
   margin 5px 60px !important
   padding 0
@@ -645,13 +651,11 @@ header
       font-weight 300
       font-size 22px
       margin 0
+
 .box-default
+  background-color #cb6133
   margin 10px
-  border-left 5px solid transparent
-  border-right 5px solid transparent
-  border-top 5px solid transparent
-  border-bottom-right-radius 3px
-  border-bottom-left-radius 3px
+  border 5px solid white
   -webkit-transition all ease 0.1s
   -moz-transition all ease 0.1s
   -ms-transition all ease 0.1s
@@ -695,15 +699,15 @@ header
   .box-container
     background-color #cb6133
     text-align left
-    border-bottom-right-radius 3px
-    border-bottom-left-radius 3px
+    height 60px
+
     a
       text-decoration none
       color white
-    h1
+    h3
       color white
       font-weight 300
-      font-size 22px
+      font-size 18px
       margin 0
     p
       color #5d5d5d
@@ -712,14 +716,12 @@ header
       padding 0 10px
   &:hover, &:focus
     background transparent
-    border-left 5px solid #d14094
-    border-right 5px solid #d14094
-    border-top 5px solid #d14094
+    border 5px solid #cb6133
     .img-box
       opacity 1
     h1,h2,h3
       color #fff
-      background-color #d14094
+      background-color #cb6133
     p
       color #555
     .comment-area
@@ -811,6 +813,7 @@ header
       font-weight bold
       color #999
 #breadcrumb
+  background-color #eee7de
   border-bottom 1px solid #f5f5f5
   .breadcrumb
     padding 15px 15px
@@ -819,10 +822,12 @@ header
     border-radius 0
     border-top 1px solid transparent
     border-bottom 1px solid transparent
-    margin-bottom 0px
-
+    margin-bottom 0
+    .breadcrumb > .active
+      color rgba(111, 79, 60, 0.52)
+      font-weight bold
     li>a
-      color #cccccc
+      color rgba(111, 79, 60, 0.52)
 .img-size
   a>img
     width 100%
@@ -1057,11 +1062,11 @@ header
     color #0177B5
 
 .social-media
-  color #666666
+  color #3a2103
   padding 30px 0
   .social
     a
-      color #666666
+      color #3a2103
       font-size 18px
       line-height 40px
 
@@ -1083,7 +1088,7 @@ header
   background transparent
   padding-bottom  100px
   .title, .text-form
-    color #565656
+    color #3a2103
 .contact-section
   background rgba(255,255,255,0.95)
   padding 25px
@@ -1117,7 +1122,7 @@ header
 
   &:focus
     padding 6px 12px
-    border 1px solid red !important
+    border 1px solid #cb6133 !important
     outline 0
     -webkit-box-shadow 0 0 0 9px rgba(0, 0, 0, 0)
     box-shadow 0 0 0 9px rgba(0, 0, 0, 0)
