--- a/app/css/main.css
+++ b/app/css/main.css
@@ -159,7 +159,7 @@ header .navbar-default {
   border-bottom: 3px dashed #372611;
   border-radius: 0;
   margin-bottom: 0;
-  z-index: 0;
+  z-index: 9999;
 }
 header .navbar-default .navbar-brand {
   padding: 5px 15px;
@@ -1851,6 +1851,32 @@ color
   }
 }
 @media only screen and (max-width: 767px) {
+  #products {
+    text-align: center;
+  }
+  .nav-tabs > li {
+    float: none;
+  }
+  .navbar-default .container-fluid {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .nav-tabs {
+    width: 100%;
+  }
+  .tab-pane {
+    width: 100%;
+    margin-top: 0;
+  }
+  .nav-top .data-contact {
+    padding: 5px 0;
+  }
+  .nav-top .pull-left {
+    float: none !important;
+  }
+  .nav-top .pull-right {
+    display: none;
+  }
   .mail-top {
     margin-left: -15px;
     margin-top: 5px;
@@ -1882,7 +1908,7 @@ color
     width: 40%;
   }
   .slider-img {
-    height: 760px;
+    height: 500px;
   }
   header {
     width: 100%;
@@ -1902,8 +1928,6 @@ color
     display: none;
   }
   .box-widget {
-    border-left: 0 solid transparent;
-    border-top: 1px solid #ccc;
     padding: 0;
   }
   .carousel-caption h3 {
@@ -2006,12 +2030,11 @@ color
   .navbar-default .navbar-collapse,
   .navbar-default .navbar-form {
     border: none;
-    background: rgba(0,0,0,0.89);
+    background: #3a2103;
   }
   .navbar-nav {
     background: transparent;
     margin-top: 25px;
-    box-shadow: 0 4px 5px rgba(0,0,0,0.3);
     border-top: 1px solid #f5f5f5;
   }
   .fluid-res {
@@ -2022,7 +2045,7 @@ color
   }
   header .logo {
     margin-top: 10px;
-    width: auto;
+    width: 200px;
   }
   h2.title-outstanding {
     font-size: 16px !important;
@@ -2061,26 +2084,6 @@ color
   .carousel-caption .btn {
     margin-bottom: 20px;
   }
-  .portfolio_content {
-    position: relative;
-    margin-bottom: 0;
-  }
-  .portfolio_content p {
-    border: 2px solid #e3e3e3;
-    padding: 20px 40px;
-  }
-  .portfolio_content h3 {
-    position: absolute;
-    width: 100%;
-    height: auto;
-    top: 125px;
-    text-align: center;
-    font-size: 24px;
-    color: #fff;
-    line-height: 160px;
-    background: transparent;
-    text-shadow: 0 1px 4px rgba(0,0,0,0.51);
-  }
   .main-nav {
     background: #ddd;
   }
@@ -2107,7 +2110,7 @@ color
     padding-right: 0;
   }
   .navbar-toggle .icon-bar {
-    background-color: #fff !important;
+    background-color: #3a2103 !important;
   }
   .header_area_text {
     padding-top: 50px;
@@ -2125,76 +2128,6 @@ color
   }
   .single_feature i {
     left: 40%;
-  }
-  .story_text h2,
-  .experience h2 {
-    margin-bottom: 10px;
-    margin-top: 10px;
-  }
-  .clients_say p::before {
-    display: none;
-  }
-  .say {
-    width: 85%;
-  }
-  .c_img {
-    width: 15%;
-  }
-  .clients_say p {
-    padding: 10px;
-  }
-  .clients_say {
-    margin-bottom: 60px;
-  }
-  .skills h2 {
-    margin-top: 20px;
-    margin-bottom: 10px;
-  }
-  .single_blog {
-    margin-bottom: 30px;
-    padding: 0px;
-  }
-  .single_blog h2 {
-    width: 100%;
-    font-size: 16px;
-    display: inline-block;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    -o-text-overflow: ellipsis;
-  }
-  .single_blog img {
-    width: 100%;
-    height: 100%;
-  }
-  .single_blog p {
-    font-size: 12px;
-    margin-top: 5px;
-  }
-  .call_to_action_text h2 {
-    font-size: 22px;
-  }
-  .call_to_action_text p {
-    font-size: 12px;
-    margin-top: 5px;
-  }
-  .text-right {
-    text-align: right;
-  }
-  p {
-    font-size: 12px;
-  }
-  h2 {
-    font-size: 22px;
-  }
-  .company_address p {
-    font-size: 12px;
-  }
-  .company_address h2 {
-    font-size: 16px;
-  }
-  .company_address {
-    padding: 10px 15px;
   }
   .margin10 {
     margin-bottom: 20px;
