--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -85,13 +85,13 @@
   .contact-section
     margin-top 45px
   .carousel-caption
-    padding 0 25px
+    padding 25px
     h2
       font-size 24px
     h4
       font-size 18px
   .slider-img
-    height 640px
+    height 450px
   header .navbar-default .nav-log li > a
     padding 15px 0
     border none
