Add target blank in a ref elements

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -15,9 +15,9 @@
                                 <h3><a href="tel:013531062495"><i class="fa fa-phone"></i> 01 353 106 2495</a></h3>
                                 <h3><a href="mailto:{{ initConfig.email }}"><i class="fa fa-envelope"></i>
             {{ initConfig.email }}</a></h3>
-                                <h3><a href="https://www.google.com.mx/maps/place/San+Daniel+Comboni+284,+Centro+Tres,+Sahuayo+de+Morelos,+Mich./@20.0642639,-102.7300404,17z/data=!3m1!4b1!4m5!3m4!1s0x842ee34e7d91b5b1:0x5d3896efd8723777!8m2!3d20.0642589!4d-102.7278464"><i
+                                <h3><a target="_blank" href="https://www.google.com.mx/maps/place/San+Daniel+Comboni+284,+Centro+Tres,+Sahuayo+de+Morelos,+Mich./@20.0642639,-102.7300404,17z/data=!3m1!4b1!4m5!3m4!1s0x842ee34e7d91b5b1:0x5d3896efd8723777!8m2!3d20.0642589!4d-102.7278464"><i
                         class="fa fa-map-marker"></i> San Daniel comboni #284, 59000 Sahuayo.</a></h3>
-                                <h3><a href="https://www.facebook.com/joseluisgtzf"><i class="fa fa-facebook-square"></i> Facebook</a></h3>
+                                <h3><a href="https://www.facebook.com/joseluisgtzf" target="_blank"><i class="fa fa-facebook-square"></i> Facebook</a></h3>
                             </div>
                         </div>
                     </div>
