--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -2,8 +2,8 @@
     <div class="text-center">
         <a href="mailto:{{ initConfig.email }}"><i class="fa fa-envelope"></i> {{ initConfig.email }}</a> /
         <a href="tel:013531062495"><i class="fa fa-phone"></i> 01 353 106 2495</a><br/>
-        <a href="https://www.google.com.mx/maps/place/San+Daniel+Comboni+284,+Centro+Tres,+Sahuayo+de+Morelos,+Mich./@20.0642639,-102.7300404,17z/data=!3m1!4b1!4m5!3m4!1s0x842ee34e7d91b5b1:0x5d3896efd8723777!8m2!3d20.0642589!4d-102.7278464">
-            <i class="fa fa-map-marker"></i> San Daniel comboni #284, 59000 Sahuayo.</a>
+        <a target="_blank" href="https://www.google.com.mx/maps/place/San+Daniel+Comboni+284,+Centro+Tres,+Sahuayo+de+Morelos,+Mich./@20.0642639,-102.7300404,17z/data=!3m1!4b1!4m5!3m4!1s0x842ee34e7d91b5b1:0x5d3896efd8723777!8m2!3d20.0642589!4d-102.7278464">
+            <i class="fa fa-map-marker"></i> San Daniel Comboni #284, 59000 Sahuayo.</a>
     </div>
     <div class="text-center">
         Copyright © 2016 Luissa Shoes
